--- a/server-api/src/main/resources/application.properties
+++ b/server-api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mytools
+spring.datasource.url=jdbc:mysql://localhost:3306/mytools?useUnicode=true&characterEncoding=utf8&mysqlEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=12345678
